--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "glob": "^7.1.4",
-    "inquirer": "^6.3.1"
+    "inquirer": "^6.3.1",
+    "keypress": "^0.2.1"
   },
   "devDependencies": {},
   "repository": {
